# NTU_2023Fall_MachineLearningFoundationAndTechniques

./: README.md  pyproject.toml
final/: createparquet.ipynb  db.sqlite3  loss.csv  model.ipynb  predict.ipynb  predict_stage1.ipynb  test.ipynb  train.ipynb  train_with_whole.ipynb
final/models/: 500101001  500101002  500101003  500101005  500101006  500101007  500101008  500101009  500101013  500101018  500101019  500101021  500101023  500101024  500101026  500101030  500101033  500101034  500101035  500101038  500101039  500101185  500105066  500119049  500119059  500119069
final/parquets/: 500101001.parquet  500101001test.parquet  500101001train.parquet  500101002.parquet  500101003.parquet  500101004.parquet  500101005.parquet  500101006.parquet  500101007.parquet  500101008.parquet  500101009.parquet  500101010.parquet  500101013.parquet  500101013test.parquet  500101013train.parquet  500101014.parquet  500101015.parquet  500101018.parquet  500101019.parquet  500101020.parquet  500101021.parquet  500101022.parquet  500101023.parquet  500101024.parquet  500101025.parquet  500101025test.parquet  500101025train.parquet  500101026.parquet  500101027.parquet  500101028.parquet  500101029.parquet  500101030.parquet  500101031.parquet  500101032.parquet  500101033.parquet  500101034.parquet  500101035.parquet  500101035test.parquet  500101035train.parquet  500101036.parquet  (+15 more)
hw1/: data.txt  hw1.html  hw1.ipynb  hw1.pages
hw2/: hw2.ipynb  hw2_17.py
hw3/: hw3.ipynb
hw4/: hw4.ipynb
hw5/: hw5.ipynb  tmp.ipynb
hw6/: hw6.ipynb  test.txt  train.txt
(+36 files in other folders)
